Added check for directory existence
When upper and lower mounts do not exist, the tests fail to execute.
This patch allows tests to run successfully. There is also a change in
name of mount type from 'overlayfs' to 'overlay'. With these changes
tests pass successfully. The --um doesn't work as it requires specific
mount binary to be present in a specific path.

Signed-off-by: Milosz Wasilewski <milosz.wasilewski@linaro.org>

--- a/README
+++ b/README
@@ -1,13 +1,8 @@
 To run these tests:
 
- (1) Run make
+ (1) Make sure you have root permissions
 
- (2) Copy fs-op and open-file to /usr/local/bin/
-
- (3) If testing unionmount, do:
-
-	./run
-
-     If testing overlayfs, do:
-
-	TEST_OVERLAYFS=1 ./run.sh
+ (2) Run
+ ./run --ov
+ ./run --no
+ ./run --um (might not work because of the incorrect path)
